--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body>
             <header>
                 <nav>
-          <a href="">WebStudio</a>
+          <a href="./index.html">WebStudio</a>
          
           <ul>
             <li><a href="">Studio</a></li>
@@ -16,10 +16,12 @@
             <li><a href="">Contacts</a></li>
           </ul>
         </nav>
+        <address>
           <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tell:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a href="tell:+110001111111">+11(000)111-11-11</a></li>
           </ul>
+        </address>
           </header>
 
           <main>
@@ -53,9 +55,9 @@
             <section>
                 <h2>What are we doing</h2>
                 <ul>
-                    <li><img src="./img-1-device.jpg" width="360" height="300" alt="picture-of-computer"></li>
-                    <li><img src="./img-2-device.jpg" width="360" height="300"  alt="picture-of-screen-messenger"></li>
-                    <li><img src="./img-3-device.jpg" width="360" height="300"  alt="picture-of-phone"></li>
+                    <li><img src="images/../img-1-device.jpg" width="360" height="300" alt="picture-of-computer"></li>
+                    <li><img src="images/../img-2-device.jpg" width="360" height="300"  alt="picture-of-screen-messenger"></li>
+                    <li><img src="images././img-3-device.jpg" width="360" height="300"  alt="picture-of-phone"></li>
                 </ul>
             </section>
 
@@ -63,22 +65,22 @@
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="./img-4-team.jpg" width="264" height="260" alt="picture-of-Product-Designer">
+                        <img src="images/../img-4-team.jpg" width="264" height="260" alt="picture-of-Product-Designer">
                             <h3>Mark Guerrero</h3>
                             <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./img-5-team.jpg" width="264" height="260" alt="picture-of-Frontend-Developer">
+                        <img src="images/../img-5-team.jpg" width="264" height="260" alt="picture-of-Frontend-Developer">
                             <h3>Tom Ford</h3>
                             <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./img-6-team.jpg" width="264" height="260" alt="picture-of-Marketing">
+                        <img src="images/../img-6-team.jpg" width="264" height="260" alt="picture-of-Marketing">
                             <h3>Camila Garcia</h3>
                             <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./img-7-team.jpg" width="264" height="260" alt="picture-of-UI-Designer">
+                        <img src="images/../img-7-team.jpg" width="264" height="260" alt="picture-of-UI-Designer">
                             <h3>Daniel Wilson</h3>
                             <p>UI Designer</p>
                     </li>
@@ -87,7 +89,7 @@
           </main>
           
           <footer>
-            <a href="">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </footer>
         </body>
